# Sirius

./: .env.example  .gitignore  AGENTS.md  COMANDOS_SIRIUS.md  DEEP_RESEARCH_CONFIG.md  README.md  ROADMAP_PLAN.md  RUN.md  build.py  build_backend.py  diagnose.py  job_radar_widget.py  main.py  memory.json  or_client.py  pyproject.toml  requirements.txt  run-integrated.py  run-tauri.py  setup.py  sirius-backend.spec  sirius.spec  sirius_backend_launcher.py  sirius_ui.py  test_yt_scrape.py  ui.py  voice-assistant.bat  voice-assistant.py  ws_server.py
actions/: apply_assist.py  browser_control.py  business_radar.py  code_helper.py  computer_control.py  computer_settings.py  deep_research.py  desktop.py  dev_agent.py  file_controller.py  file_processor.py  flight_finder.py  freela_arsenal.py  game_updater.py  gmail.py  google_calendar.py  linkedin_jobs_radar.py  notion_calendar.py  open_app.py  proactive.py  reminder.py  screen_processor.py  send_message.py  weather_report.py  web_search.py  workspaces.py  youtube_video.py
agent/: error_handler.py  executor.py  planner.py  task_queue.py
config/: __init__.py  api_keys.json  permissions.py
core/: business_analyzer.py  cache.py  config_loader.py  credential_manager.py  google_auth.py  google_jobs_scraper.py  google_maps_scraper.py  installer.py  job_analyzer.py  linkedin_scraper.py  llm_client.py  llm_utils.py  notion_auth.py  prompt.txt  (+4 more)
sirius-ui/src-tauri/: Cargo.toml  tauri.conf.json
sirius-ui/src-tauri/capabilities/: default.json
sirius-ui/src-tauri/icons/: icon.icns
sirius-ui/src-tauri/src/: lib.rs  main.rs
(+119 files in other folders)
