[package]
name = "sirius-ui"
version = "0.1.0"
description = "SIRIUS - Voice AI Assistant"
authors = ["Rafael Ildefonso"]
edition = "2021"

[lib]
name = "sirius_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
